@@ -207,6 +207,7 @@ fixed bugs:
 - fixed bug in reader_cip regarding reading of very long constraints
 - fixed bug in cons_knapsack: in seldom circumstances the relaxation of a linear constraint can detect infeasibility, which was not handled properly
 - fixed bug in cons_quadratic: in seldom cases, fixed variables may have been substituted out wrongly in presolve
+- fixed bug in cons_countsols.c w.r.t. to collecting feasible solutions
 
 performance improvements:
 - fasten propagation in cons_knapsack.c due to negated clique partitions
